--- a/PickleFrankLabData.ipynb
+++ b/PickleFrankLabData.ipynb
@@ -565,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FrankLabData.save_pkl('FrankLabData.nel')"
@@ -599,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
