New files working up to place field generation

--- a/MotivationalT-loading/loading test caleb.ipynb
+++ b/MotivationalT-loading/loading test caleb.ipynb
@@ -1396,21 +1396,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import nelpy.io\n",
+    "MVDMData = nel.ResultsContainer(Data=Data,\n",
+    "                                    description='Test dataset - R042 2013-08-18.\\n')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "MVDMData.save_pkl('/home/kemerelab/Data/MVDMData.nel')"
+   ]
   }
  ],
  "metadata": {
