Updated Ripple Bias notebook and began work on loading all other animals

--- a/MotivationalT-loading/Convert All Animal Days to Nelpy.ipynb
+++ b/MotivationalT-loading/Convert All Animal Days to Nelpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'calebs-skylake-ubuntu-1604'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -64,10 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
@@ -76,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re \n",
@@ -89,41 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['R042-2013-08-16',\n",
-       " 'R042-2013-08-17',\n",
-       " 'R042-2013-08-18',\n",
-       " 'R042-2013-08-19',\n",
-       " 'R042-2013-08-20',\n",
-       " 'R042-2013-08-21',\n",
-       " 'R044-2013-12-18',\n",
-       " 'R044-2013-12-19',\n",
-       " 'R044-2013-12-20',\n",
-       " 'R044-2013-12-21',\n",
-       " 'R044-2013-12-22',\n",
-       " 'R044-2013-12-23',\n",
-       " 'R050-2014-03-29',\n",
-       " 'R050-2014-03-30',\n",
-       " 'R050-2014-03-31',\n",
-       " 'R050-2014-04-01',\n",
-       " 'R050-2014-04-02',\n",
-       " 'R050-2014-04-03',\n",
-       " 'R064-2015-04-18',\n",
-       " 'R064-2015-04-19',\n",
-       " 'R064-2015-04-20',\n",
-       " 'R064-2015-04-21',\n",
-       " 'R064-2015-04-22',\n",
-       " 'R064-2015-04-23']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'datadirs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d6a278ffde90>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdatadirs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'datadirs' is not defined"
+     ]
     }
    ],
    "source": [
@@ -132,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -145,18 +119,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# define some testing data file locations\n",
-    "fd = os.path.join(dataroot,datadirs[2]) # need function that makes list of all folders\n",
-    "fn_lfp = 'R042-2013-08-18-CSC11a.ncs' # from *keys.m, need loader to make file into dict\n",
-    "fn_vt = 'VT1.nvt'\n",
-    "CONST_conv_fact = [2.9176, 2.3794] # pixels to cm conversion for x, y (also from ExpKeys)\n",
-    "\n"
+    "# Info from ExpKeys\n",
+    "CONST_conv_fact = {}\n",
+    "CONST_conv_fact['R042'] = [2.9176, 2.3794]\n",
+    "CONST_conv_fact['R050'] = [2.6853, 2.6169]\n",
+    "CONST_conv_fact['R064'] = [2.6497, 2.6485]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R042 2013-08-16\n",
+      "/home/kemerelab/Data/motivational-t/R042-2013-08-16/R042-2013-08-16-VT1.zip\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(120390, 2)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kemerelab/Code/nelpy/nelpy/core/_analogsignalarray.py:360: UserWarning: creating support from time and sampling rate, fs!\n",
+      "/home/kemerelab/Code/nelpy/nelpy/utils.py:549: UserWarning: some steps in the data are smaller than the requested step size.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "import scipy.io as sio\n",
+    "\n",
+    "\n",
+    "Data = {}\n",
+    "for ddir in datadirs:\n",
+    "    dayinf = re.match(r'(R\\d\\d\\d)-(\\d\\d\\d\\d-\\d\\d-\\d\\d)', ddir)\n",
+    "    anim = dayinf.group(1)\n",
+    "    day = dayinf.group(2)\n",
+    "    print(anim,day)\n",
+    "    if anim not in Data:\n",
+    "        Data[anim] = {}\n",
+    "    \n",
+    "    # define some testing data file locations\n",
+    "    fn = os.path.join(dataroot,ddir) # need function that makes list of all folders\n",
+    "    \n",
+    "    \n",
+    "    fn_vt = ddir + '-VT1.zip'\n",
+    "    fn_vt = os.path.join(dataroot, ddir, fn_vt)\n",
+    "    print(fn_vt)\n",
+    "    with zipfile.ZipFile(fn_vt,\"r\") as zip_ref:\n",
+    "        zip_ref.extractall(\"/tmp\")\n",
+    "    tmp_vt = '/tmp/VT1.nvt'\n",
+    "    \n",
+    "    # Load position (.nvt) from this experiment\n",
+    "    position = nept.load_position(tmp_vt,CONST_conv_fact[anim])\n",
+    "    \n",
+    "    # vt is a 2-D AnalogSignalArray -- note has bigger gaps in data b/c tracking LEDs get obscured\n",
+    "    vt_nelpy = np.stack((position.x,position.y),1)\n",
+    "    vt_nelpy.shape\n",
+    "    # with warnings.catch_warnings():\n",
+    "    #    warnings.simplefilter(\"ignore\")\n",
+    "    vt_nelpy = nel.AnalogSignalArray(ydata=vt_nelpy.T,timestamps=position.time,merge_sample_gap=10,fs=30)\n",
+    "\n",
+    "    Data[anim][day] = {}\n",
+    "    Data[anim][day]['pos'] = vt_nelpy\n",
+    "    del position\n",
+    "    \n",
+    "    spikes = nept.load_spikes(os.path.join(dataroot, ddirfd))\n",
+    "    spikes_list = [ss.time for ss in spikes]\n",
+    "\n",
+    "    \n",
+    "    # load ripple \"candidates\"\n",
+    "    fn_cand = ddir + '-candidates.mat'\n",
+    "    cand = sio.loadmat(os.path.join(dataroot,ddir,fn_cand))\n",
+    "    \n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -169,26 +232,6 @@
     "Data = {}\n",
     "Data['R042'] = {}\n",
     "Data['R042']['2013-08-18'] = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# load and show lfp using nept loaders\n",
-    "lfp = nept.load_lfp(os.path.join(dataroot,fd,fn_lfp))\n",
-    "\n",
-    "start = 4261\n",
-    "stop = 4262\n",
-    "lfpR = lfp.time_slice(start, stop)\n",
-    "\n",
-    "#plt.plot(lfp.time, lfp.data)\n",
-    "plt.plot(lfpR.time, lfpR.data)\n",
-    "plt.show()"
    ]
   },
   {
@@ -223,36 +266,6 @@
     "# for idx, spiketrain in enumerate(spikes):\n",
     "#     plt.plot(spiketrain.time, np.ones(len(spiketrain.time))+idx, '|');\n",
     "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# lfp should be AnalogSignalArray\n",
-    "lfp_nelpy = nel.AnalogSignalArray(ydata=lfp.data,timestamps=lfp.time,merge_sample_gap=1)\n",
-    "print(lfp_nelpy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# vt is a 2-D AnalogSignalArray -- note has bigger gaps in data b/c tracking LEDs get obscured\n",
-    "vt_nelpy = np.stack((position.x,position.y),1)\n",
-    "vt_nelpy.shape\n",
-    "vt_nelpy = nel.AnalogSignalArray(ydata=vt_nelpy.T,timestamps=position.time,merge_sample_gap=10)\n",
-    "print(vt_nelpy)\n",
-    "\n",
-    "Data['R042']['2013-08-18']['pos'] = vt_nelpy"
    ]
   },
   {
