Finalized nelpy importation. Just needs maze boundaries now.

--- a/Ripple-Bias-Moti-T.ipynb
+++ b/Ripple-Bias-Moti-T.ipynb
@@ -821,6 +821,8 @@
     "\n",
     "for anim, animdata in data.items():\n",
     "    RippleArmScores[anim] = {}\n",
+    "    if anim != 'R042':\n",
+    "        continue\n",
     "    \n",
     "    for day, daydata in animdata.items():\n",
     "        print(anim, day)\n",
